JMF Logging: log4j2 Exceptions Backup camera: hack for video of webcam